# discipline-daemon

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md  _txt
discipline_daemon_lib/: .gitignore  Cargo.toml  TODO  TODO.md  dependencies.md  mimes.ts
discipline_daemon_lib/src/: daemon.rs  into_public.rs  lib.rs  operation.rs  prpc.rs  state.rs  synchronize_source.rs
discipline_daemon_lib/src/api/: mod.rs  operations.rs  rpc.rs  server.rs
discipline_daemon_lib/src/chronic/: countdown.rs  countdown_timer.rs  daily_device_uptime_tracker.rs  datetime.rs  duration.rs  hour.rs  minute.rs  mod.rs  time.rs  time_range.rs  time_tracker.rs  weekday.rs  weekday_range.rs
discipline_daemon_lib/src/chronic_types/: countdown_timer.rs  datetime.rs  duration.rs  hour.rs  minute.rs  month.rs  time.rs  time_range.rs  utility.rs  weekday.rs  weekday_range.rs
discipline_daemon_lib/src/common/: background_time_counter.rs  calculate_duration_till_state_change.rs  daily_foreground_countdown_timer.rs  mod.rs  networking_disabled_time_counter.rs  networking_enabled_time_counter.rs  operating_system_password.rs  operating_system_user_id.rs  operating_system_username.rs  password.rs  password_enabler.rs  uuid.rs
discipline_daemon_lib/src/common_types/: mod.rs  operating_system_password.rs  operating_system_user_id.rs  operating_system_username.rs  password.rs  synchronize.rs  uuid.rs
discipline_daemon_lib/src/database/: actions.rs  code_generators.rs  collection.rs  collection_item_matcher.rs  collection_item_modifications_draft.rs  collection_item_specification.rs  database.rs  mod.rs  (+12 more)
(+1002 files in other folders)
