[package]
name = "discipline_daemon_lib"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
chrono = { version = "0.4.33", features = [ "serde" ] }
serde_json = "1.0.133"
serde = { version = "1.0.193", features = [ "derive" ] }
uuid = { version = "1.7.0", features = [ "serde", "v4" ] }
rusqlite = "0.33.0"
tiny_http = "0.12.0"
rand = "0.9.0"
url = "2.5.4"
clap = { version = "4.5.32", features = [ "derive" ] }
httparse = "1.10.1"
libc = "0.2.174"
tokio = "1.46.1"
# leptos = { version = "0.7.8", features = ["csr"] }
# dbus = "0.9.7"

[target.x86_64-unknown-linux-gnu]
linker = "gcc"
